// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBox/> should test automatic closing 1`] = `
<div>
  <div
    id="lens-ui-portal-modal-root"
  />
  <div
    class="messageBox messageBoxStriped message-box--intent-primary"
    data-lens-element="message-box"
    data-testid="my_testing_id"
  >
    <div
      class="messageBoxTitle"
      data-lens-element="message-box__title"
    >
      my_title
    </div>
    <button
      class="messageBoxCloseButton message-box--intent-primary__close-button"
      data-lens-element="message-box__close-button"
    >
      <svg
        class="icon"
        data-lens-element="icon"
        fill="currentColor"
        height="0.8rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="0.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z"
        />
      </svg>
    </button>
    <div>
      <div
        data-lens-element="message-box__icon"
      >
        Icon
      </div>
      <div
        class="messageBoxContent"
      >
        Hello world
      </div>
    </div>
    <div
      class="progressBar"
      data-lens-element="progress-bar"
      data-lens-intent="primary"
      style="height: 0.625rem;"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="progress-bar__indicator-intent-primary"
        data-lens-element="progress-bar__indicator"
        data-lens-intent="primary"
        role="progressbar"
        style="width: 0%;"
      />
    </div>
  </div>
</div>
`;

exports[`<MessageBox/> should test automatic closing 2`] = `
<div>
  <div
    id="lens-ui-portal-modal-root"
  />
  <div
    class="messageBox messageBoxStriped message-box--intent-primary"
    data-lens-element="message-box"
    data-testid="my_testing_id"
  >
    <div
      class="messageBoxTitle"
      data-lens-element="message-box__title"
    >
      my_title
    </div>
    <button
      class="messageBoxCloseButton message-box--intent-primary__close-button"
      data-lens-element="message-box__close-button"
    >
      <svg
        class="icon"
        data-lens-element="icon"
        fill="currentColor"
        height="0.8rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="0.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z"
        />
      </svg>
    </button>
    <div>
      <div
        data-lens-element="message-box__icon"
      >
        Icon
      </div>
      <div
        class="messageBoxContent"
      >
        Hello world
      </div>
    </div>
    <div
      class="progressBar"
      data-lens-element="progress-bar"
      data-lens-intent="primary"
      style="height: 0.625rem;"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="progress-bar__indicator-intent-primary"
        data-lens-element="progress-bar__indicator"
        data-lens-intent="primary"
        role="progressbar"
        style="width: 254.99999999999997%;"
      />
    </div>
  </div>
</div>
`;

exports[`<MessageBox/> should test the close button uncontrolled state 1`] = `
<div>
  <div
    id="lens-ui-portal-modal-root"
  />
  <div
    class="messageBox message-box--intent-primary"
    data-lens-element="message-box"
    data-testid="my_testing_id"
  >
    <div
      class="messageBoxTitle"
      data-lens-element="message-box__title"
    >
      my_title
    </div>
    <button
      class="messageBoxCloseButton message-box--intent-primary__close-button"
      data-lens-element="message-box__close-button"
    >
      <svg
        class="icon"
        data-lens-element="icon"
        fill="currentColor"
        height="0.8rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="0.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z"
        />
      </svg>
    </button>
    <div>
      <div
        class="messageBoxContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`<MessageBox/> should test the close button uncontrolled state 2`] = `
<div>
  <div
    id="lens-ui-portal-modal-root"
  />
  <div
    class="messageBox messageBoxHidden message-box--intent-primary"
    data-lens-element="message-box"
    data-testid="my_testing_id"
  >
    <div
      class="messageBoxTitle"
      data-lens-element="message-box__title"
    >
      my_title
    </div>
    <button
      class="messageBoxCloseButton message-box--intent-primary__close-button"
      data-lens-element="message-box__close-button"
    >
      <svg
        class="icon"
        data-lens-element="icon"
        fill="currentColor"
        height="0.8rem"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="0.8rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z"
        />
      </svg>
    </button>
    <div>
      <div
        class="messageBoxContent"
      >
        Hello world
      </div>
    </div>
  </div>
</div>
`;
